[package]
name = "fendermint_snapshot_test"
description = "End-to-end integration testing multiple nodes exercising snapshots and state sync"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
